crates/compiler/cypress/tests/snapshots/test_parse__annotated_tuple_destructure_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "( x, y ) : Foo\n( x, y ) = ( \"foo\", 3.14 )\n\nx\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            (BeginParens Ident=>LowerIdent@1 Ident=>LowerIdent@3 EndParens)
            InlineTypeColon=>OpColon@5
            TypeName=>UpperIdent@6
        EndTypeOrTypeAlias)
        (BeginAssignDecl
            (BeginParens Ident=>LowerIdent@8 Ident=>LowerIdent@10 EndParens)
            InlineAssign=>OpAssign@12
            (BeginParens String=>String@14 Num=>Int@16 EndParens)
        EndAssignDecl)
        HintExpr
        Ident=>LowerIdent@18
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Tuple([Ident("x"), Ident("y")]), Name("Foo"))
Assign(Tuple([Ident("x"), Ident("y")]), Tuple([String("\"foo\""), IntBase10("3.14")]))
Ident("x")

[=== formatted below ===]

