crates/compiler/cypress/tests/snapshots/test_parse__apply_tag_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "Whee 12 34\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            UpperIdent=>UpperIdent@0
            InlineApply=>UpperIdent@0
            Num=>Int@1
            InlineApply=>Int@1
            Num=>Int@2
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(UpperIdent("Whee"), [IntBase10("12"), IntBase10("34")])

[=== formatted below ===]

